[project]
name = "docs-monorepo"
version = "0.1.0"
description = "Consolidated LangChain documentation monorepo"
readme = "README.md"
requires-python = ">=3.13.0,<4.0.0"
dependencies = [
    "watchdog>=3.0.0",
    "tqdm>=4.66.0",
    "nbformat>=5.0.0",
    "pyyaml>=6.0.2",
    "nbconvert>=7.17.1",
    "langchain>=1.0.1",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.1.14",
    "langgraph-checkpoint-postgres",
    "psycopg[binary,pool]>=3.2.0",
    "deepagents[quickjs]>=0.6.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
    "langchain-google-genai>=2.0.0",
    "langchain-daytona>=0.0.5",
    "daytona>=0.100.0",
    "langchain-quickjs>=0.1.2",
]


[dependency-groups]
test = [
    "requests",
    "ruamel-yaml>=0.18.15",
    "ty>=0.0.23,<1.0.0",
    "ruff>=0.13.0,<1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "codespell>=2.4",
]


[project.scripts]
docs = "pipeline.cli:main"


[project.urls]
repository = "https://github.com/langchain-ai/docs"


[tool.setuptools]
packages = ["pipeline"]


[tool.uv]
package = true
override-dependencies = [
    "pytest-codspeed>=3.1.0,<4.0.0",
]


[tool.pytest.ini_options]
minversion = "8.0"
# -ra: Report all extra test outcomes (passed, skipped, failed, etc.)
# -q: Enable quiet mode for less cluttered output
# -v: Enable verbose output to display detailed test names and statuses
# --durations=5: Show the 10 slowest tests after the run (useful for performance tuning)
addopts = "-ra -q -v --durations=5"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.codespell]
ignore-words = "src/.codespellignore"
skip = "**/document_loaders/image_captions.mdx,src/oss/python/integrations/**,src/oss/javascript/integrations/**,src/oss/integrations/**,src/code-samples/**,**/*.svg,**/*.json"
uri-ignore-words-list = "*"

[tool.ruff]
line-length = 88
extend-exclude = [
    "scripts",
    "scripts/update_mdx.py",
    "pipeline/tools/notebook/convert.py",
    "src/code-samples",
]


[tool.ruff.lint]
select = [
    "ALL",
]

ignore = [
    "COM812",
    "C901",
    "PLR0915",
    "PLR0912"
]


[tool.ruff.lint.extend-per-file-ignores]

".github/**/*.py" = []

"pipeline/**/*.py" = [
    "TD002",  # Comments are fine
    "TD003",  # Comments are fine
    "FIX002", # Comments are fine
    "D103",   # Missing docstring in simple function
]

"pipeline/preprocessors/link_map.py" = [
    "E501",  # Line length
]

"tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "D104",

    # The below are debatable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "SLF001", # OK to access private members in unit tests!
    "W291", # Test files may have trailing whitespace intentionally
    "W293", # Test files may have blank lines with whitespace intentionally
]

"scripts/**/*.py" = [
    "INP001",  # Not a package
    "T201",    # Print statements
    "PLW2901", # Overwriting loop variable is intentional
    "ANN",     # Type annotations
    "FBT002",  # Boolean defaults are fine
    "D103",    # Missing docstring in public function
    "E501",    # Line too long (user-facing messages)
    "EXE001",  # Shebang without executable bit
    "PLR2004", # Magic values in comparisons
    "PTH123",  # open() vs Path.open()
    "S603",    # subprocess call
    "S607",    # Partial executable path
    "SIM102",  # Collapsible if statements
]

"src/code-samples/**/*.py" = [
    "INP001",  # Not a package
    "D100",    # Module docstring
    "D101",    # Class docstring
    "D103",    # Function docstring
    "S101",    # Assert in sample verification
    "T201",    # Print statements
    "B007",    # Unused loop variable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
exclude = [
    "scripts/",
    "src/code-samples/",
]

[tool.ty.rules]
invalid-method-override = "ignore"  # nbconvert subclass parameter name mismatches
